# Purple3DS

./: CMakeLists.txt  build.bat  build.sh  single_row_font_sheet_to_c.py
include/: BattleState.h  Battler.h  Blocker.h  Effect.h  Encounter.h  Evolution.h  FlyLocation.h  GameConfig3DS.h  Giver.h  Gui.h  Item.h  MAP_3DS_bgr.h  MartItem.h  Monster.h  Move.h  Npc.h  NpcStrings.h  Player.h  PokeMap.h  TmLearnsets.h  Trader.h  Trainer.h  Types.h  Utils.h  Warp.h  WorldObject.h  all_battlers.h  all_glyphs.h  all_sprites.hpp  all_tiles.h  debug.h  map_3ds.h  map_3ds_data.h  map_data.h
source/: BattleState.cpp  Battler.cpp  Blocker.cpp  Effect.cpp  Encounter.cpp  Evolution.cpp  FlyLocation.cpp  Giver.cpp  Gui.cpp  Item.cpp  MAP_3DS_bgr.c  MartItem.cpp  Monster.cpp  Move.cpp  Npc.cpp  NpcStrings.cpp  Player.cpp  PokeMap.cpp  TmLearnsets.cpp  Trader.cpp  Trainer.cpp  Types.cpp  Warp.cpp  WorldObject.cpp  all_glyphs_data.c  global_gui.cpp  initialize_sprites.cpp  main_3ds.cpp  map_data.cpp  sprites_map.cpp
